<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentOptionsForNum2ASMD">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/operator_options"
            android:gravity="center"
            android:textSize="30sp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxG2OptionsAdd"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/add" />

            <CheckBox
                android:id="@+id/checkBoxG2OptionsSubtract"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/subtract" />

            <CheckBox
                android:id="@+id/checkBoxG2OptionsMultiply"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/multiply" />

            <CheckBox
                android:id="@+id/checkBoxG2OptionsDivide"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/divide" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/minimum"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/inputG2OptionsMin"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:hint="@string/_12" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/maximum"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/inputG2OptionsMax"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:hint="@string/_12pos" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonG2OptionsSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/save"
            />



    </LinearLayout>




</FrameLayout>