<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentGame2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingTop="25dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvG2N1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="50sp"
                android:text="@string/_4" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingRight="100dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/tvG2Operator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multSign"
                android:textSize="50sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvG2N2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="50sp"
                android:text="@string/_4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView"
                android:layout_width="275dp"
                android:layout_height="8dp"
                android:background="@color/Black"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:gravity="center"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/inputG2"
                    android:inputType="numberSigned"
                    android:layout_width="200dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"
                    android:hint="" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonG2Submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="32sp"
                android:text="@string/submit_answer"
                />
            <!--android:text="@string/correct_next_question"-->
            <!--android:text="@string/incorrect_try_again"-->


            <Button
                android:id="@+id/buttonG2Div0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:text="@string/cannot_divide_by_0"
                />


        </LinearLayout>


    </LinearLayout>



</FrameLayout>