<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentOOMaxDrag"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/LL4N1ParenA"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:background="@color/LightYellow"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/tv4N1ParenA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/openParen"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutOrderofOperationsTargetNumber1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical"
            >
                <TextView
                android:id="@+id/tvOOTargetDragN01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:textSize="36sp"
                    />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL4N1ParenB"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:background="@color/LightYellow"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/tv4N1ParenB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/closeParen"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutOrderofOperationsTargetOperator1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvOOTargetDragOp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="36sp"
                />

        </LinearLayout>

    </LinearLayout>

<!--Row2-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/LL4N2ParenA"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:background="@color/LightYellow"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/tv4N2ParenA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/openParen"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutOrderofOperationsTargetNumber2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvOOTargetDragN02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:textSize="36sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL4N2ParenB"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:background="@color/LightYellow"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/tv4N2ParenB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/closeParen"
                android:textSize="36sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/LinearLayoutOrderofOperationsTargetOperator2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvOOTargetDragOp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="36sp"
                />

        </LinearLayout>

    </LinearLayout>

<!--Row3-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/LL4N3ParenA"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:background="@color/LightYellow"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/tv4N3ParenA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/openParen"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutOrderofOperationsTargetNumber3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvOOTargetDragN03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:textSize="36sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL4N3ParenB"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:background="@color/LightYellow"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/tv4N3ParenB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/closeParen"
                android:textSize="36sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/LinearLayoutOrderofOperationsTargetOperator3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/tvOOTargetDragOp3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="36sp"
                />
        </LinearLayout>
    </LinearLayout>

<!--Row4-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/LL4N4ParenA"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:background="@color/LightYellow"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/tv4N4ParenA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/openParen"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutOrderofOperationsTargetNumber4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/tvOOTargetDragN04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:textSize="36sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL4N4ParenB"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:background="@color/LightYellow"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/tv4N4ParenB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="@string/closeParen"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL4EqualsSignButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/Red"
            android:gravity="center"
            android:orientation="vertical">
            <Button
                android:id="@+id/btnOOTargetDragEquals"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/equalsSign"
                android:textSize="36sp"
                />
        </LinearLayout>
    </LinearLayout>




<!--Results-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="36sp"
            android:text="@string/result"
            />

        <TextView
            android:id="@+id/tvOOTargetDragResult"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="36sp"
            android:text="@string/_4"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="34sp"
            android:text="@string/maxtarget"
            />

        <TextView
            android:id="@+id/tvOOTargetDragTarget"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="36sp"
            android:text="@string/_4"
            />
    </LinearLayout>


<!--SELECT YOUR WEAPON-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/LightYellow"
            >

            <TextView
                android:id="@+id/tvOrderofOperationsDragTargetPlusSign"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/plusSign"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/LightYellow"
            >

            <TextView
                android:id="@+id/tvOrderofOperationsDragTargetMultSign"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/multSign"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/LightYellow"
            >

            <TextView
                android:id="@+id/tvOrderofOperationsDragTargetDivideSign"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/divideSign"
                android:textSize="36sp" />
        </LinearLayout>




    </LinearLayout>


</LinearLayout>